refactored test names and isolated to maven-failsafe-plugin profile